syntax = "proto3";

message MakeTurn {
  int32 room_name = 1;
  bool to_place_wall = 2;
  int32 x = 3;
  int32 y = 4;
  bool is_horizontal = 5;
}

message EndGame {}

message StartGame {
  bool is_first = 1;
  int32 room_name = 2;
}

message JoinedToQueue {
  bool success = 1;
}
